[package]
name = "minesweeper"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Carter Thaxton <carter.thaxton@gmail.com>"]
repository = "https://github.com/carter-thaxton/minesweeper/"
description = "Classic Minesweeper using egui/eframe"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.21.3"
egui = "0.21.0"
egui_extras = { version = "0.21.0", features = ["image"] }
image = { version = "0.24", default-features = false, features = ["png"] }
rand = "0.8.5"
