[package]
name = "minesweeper"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Carter Thaxton <carter.thaxton@gmail.com>"]
repository = "https://github.com/carter-thaxton/minesweeper/"
description = "Classic Minesweeper using egui/eframe"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.33.3"
egui = "0.33.3"
egui_extras = { version = "0.33.3", features = ["image"] }
image = { version = "0.25", default-features = false, features = ["png"] }
rand = "0.9.2"
